@@ -16,5 +16,7 @@ sunuo (0.1.0) unstable; urgency=low
   * support for multiple script directories in ./local/src/, every one of
     them is built into a separate DLL
   * log to ./var/log/console.log instead of ./Logs/Console.log
+  * implemented a lot of exception handlers in Network/PacketHandlers.cs,
+    to prevent the server from crashing on a
 
  --
